--- a/INTD-A3/works.html
+++ b/INTD-A3/works.html
@@ -51,7 +51,7 @@
         <div class="menu-title">Menu</div>
         
         <div class="main-links">
-            <a href="../works.html">Works</a>
+            <a href="./works.html">Works</a>
             <a href="new/STUDIO NA.EO(3).html">About</a>
            
         </div>
